# mcp-server-search

./: .gitignore  Dockerfile  LICENSE  README.md  cline_mcp_settings.json  gsearch.py  pyproject.toml  requirements.txt
src/mcp_server_search/: __init__.py  __main__.py  config.py  search_utility.py  server.py
